2011-10-14  Albert Chu <chu11@llnl.gov>

	* etc/freeipmi.conf: Fix example/doc consistency.
	
2011-10-13  Albert Chu <chu11@llnl.gov>

	* ipmi-locate/src/ipmi-locate.h: Fix typo.

	* ipmi-locate/src/ipmi-locate-argp.c: Fix copyright year typo.

	* ipmi-locate/src/ipmi-locate_.h: Renamed from ipmi-locate.h.
	Done for code consistency to how ipmiconsole handles its
	ipmiconsole_.h.
	
2011-10-13  Albert Chu <chu11@llnl.gov>

	* Update copyright globally.
	
2011-10-06  Albert Chu <chu11@llnl.gov>

	* Document HP Itegrity rx3600 workaround.
	
2011-09-23  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/src/Makefile.am: Fix logdir creation bug, should
	not hardcode /var for localstatedir.

	* libipmimonitoring/src/Makefile.am: Properly hide local library
	symbols.

2011-09-26  Diego Elio Pettenò <flameeyes@flameeyes.eu>

	* configure.ac, ipmi-sensors/src/Makefile.am: ipmimonitoring is
	generated referring to /usr/local even if configured with
	--prefix=/usr . This was caused by the broken expansion of the
	sbin path in configure.ac.

	To resolve the issue, this change no longer consider
	ipmimonitoring to be expanded by configure itself, but is rather
	processed at build time with sed so that make takes care of the
	expansion.

	The file is also not distributed (since it needs to be regenerated
	depending on configure options), but its sources are.
		
2011-09-23  Albert Chu <chu11@llnl.gov>
	
	* ipmipower/ipmipower.conf.5, ipmiconsole/ipmiconsole.conf.5:
	Remove headers.

	* libipmimonitoring/ipmi_monitoring_sensors.conf.5,
	libipmimonitoring/ipmimonitoring.conf.5,
	libipmimonitoring/ipmimonitoring_sensors.conf.5,
	libipmimonitoring/libipmimonitoring.conf.5: New files.

	* libipmimonitoring/ipmi_monitoring_sensors.conf.5.pre.in,
	libipmimonitoring/ipmimonitoring.conf.5.pre.in,
	libipmimonitoring/ipmimonitoring_sensors.conf.5.pre.in,
	libipmimonitoring/libipmimonitoring.conf.5.pre.in: Remove files.
	
	* configure.ac, libipmimonitoring/Makefile.am: Adjust.
