@@ -60,6 +60,9 @@
 #define IPMI_SDR_CACHE_SDR_RECORD_COMPACT_SHARE_COUNT         23
 #define IPMI_SDR_CACHE_SDR_RECORD_COMPACT_SHARE_COUNT_BITMASK 0x0F
 #define IPMI_SDR_CACHE_SDR_RECORD_COMPACT_SHARE_COUNT_SHIFT   0
+#define IPMI_SDR_CACHE_SDR_RECORD_EVENT_SHARE_COUNT           12
+#define IPMI_SDR_CACHE_SDR_RECORD_EVENT_SHARE_COUNT_BITMASK   0x0F
+#define IPMI_SDR_CACHE_SDR_RECORD_EVENT_SHARE_COUNT_SHIFT     0
 
 #if 0
 /* Original - sdr cache version 1.0 - keep for documentation history */
